continuing work on refactoring